fixed active on mobile backend navbar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11020,13 +11020,13 @@ body {
 }
 
 #laravel-mobile a.active span {
-  color: #007377;
-  font-size: 20px;
+  color: #007377 !important;
+  font-size: 20px !important;
 }
 
 #laravel-mobile a.active i {
-  font-size: 2.5em;
-  color: #007377;
+  font-size: 2.5em !important;
+  color: #007377 !important;
 }
 
 /* ===== Sidebar ===== */
