--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -57,12 +57,12 @@ body {
     }
 
     a.active span {
-        color: #007377;
-        font-size: 20px;
+        color: #007377 !important;
+        font-size: 20px !important;
     }
     a.active i {
-        font-size: 2.5em;
-        color: #007377;
+        font-size: 2.5em !important;
+        color: #007377 !important;
     }
 }
 /* ===== Sidebar ===== */
